--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ bevy = { version = "0.13", default-features = false, features = [
     "x11",
     "wayland",
 ] }
+thread_local = "1.1.8"
 
 [dev-dependencies]
 bevy = { version = "0.13", features = [
