--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ bevy = { version = "0.13", default-features = false, features = [
     "png",
     "bevy_sprite",
 ] }
+fast_poisson = "1.0.0"
 thread_local = "1.1"
 
 [dev-dependencies]
@@ -38,9 +39,10 @@ bevy-inspector-egui = "0.23.2"
 rand = "0.8"
 
 [features]
-default = []
+default = ["catalinzz"]
 debug = ["bevy/bevy_gizmos"]
 compatibility = []
+catalinzz = []
 pbr = []
 
 # [patch.crates-io]
@@ -49,6 +51,7 @@ pbr = []
 [[example]]
 name = "basic"
 path = "examples/basic.rs"
+required-features = ["catalinzz"]
 
 [[example]]
 name = "print_graph"
@@ -57,6 +60,7 @@ path = "examples/print_graph.rs"
 [[example]]
 name = "stress_test"
 path = "examples/stress_test.rs"
+required-features = ["catalinzz"]
 
 [[example]]
 name = "pbr"
