Added: Some optimizations for ray marching

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,7 @@ path = "examples/print_graph.rs"
 [[example]]
 name = "stress_test"
 path = "examples/stress_test.rs"
-required-features = ["catalinzz"]
+required-features = []
 
 [[example]]
 name = "ray_marching"
